Fixed font on safari

--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -11,6 +11,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    text-rendering: optimizeLegibility;
 }
 
 ::-webkit-scrollbar-track {
